*** empty log message ***

--- a/homepage/news.html
+++ b/homepage/news.html
@@ -67,13 +67,18 @@
         can be found <a href="changelog.txt" target="new">here</a>.
 
         <br><br><br>
+        <span class="content_main_bold">November 7, 2010 ~ Data Crow 3.9 BETA VII has been released</span><br><br>
+        The following has been fixed /changed since the previous beta versions: <br>
+        - Several selection problems<br>
+        - Upgrade errors<br>
+
+        <br><br><br>
         <span class="content_main_bold">November 5, 2010 ~ Data Crow 3.9 BETA VI has been released</span><br><br>
         This will, hopefully, be the last beta for a while. The following has been fixed /changed since the previous beta versions: <br>
         - Table view; many broken features<br>
         - Extremely slow Auto Numberer and Title Rewriter<br>
         - Create Multiple was no longer working<br>
         - Slow web client / server<br>
-
 
         <br><br><br>
         <span class="content_main_bold">November 4, 2010 ~ Data Crow 3.9 BETA V has been released</span><br><br>
