*** empty log message ***

--- a/homepage/news.html
+++ b/homepage/news.html
@@ -73,6 +73,10 @@
         - Upgrade errors<br>
 
         <br><br><br>
+        <span class="content_main_bold">November 9, 2010 ~ Data Crow 3.9 BETA VIII has been released</span><br><br>
+        This is the last beta version before the production version is released.<br>
+
+        <br><br><br>
         <span class="content_main_bold">November 5, 2010 ~ Data Crow 3.9 BETA VI has been released</span><br><br>
         This will, hopefully, be the last beta for a while. The following has been fixed /changed since the previous beta versions: <br>
         - Table view; many broken features<br>
