--- a/homepage/news.html
+++ b/homepage/news.html
@@ -67,41 +67,20 @@
         can be found <a href="changelog.txt" target="new">here</a>.
 
         <br><br><br>
-        <span class="content_main_bold">November 7, 2010 ~ Data Crow 3.9 BETA VII has been released</span><br><br>
-        The following has been fixed /changed since the previous beta versions: <br>
-        - Several selection problems<br>
-        - Upgrade errors<br>
+        <span class="content_main_bold">November 15, 2010 ~ Data Crow 3.9 has been released</span><br><br>
+        This release delivers a significant, mostly technical, change. The data layer, which 
+        is the way for Data Crow to load and display items, has been rewritten.<br>
+        Items were always loaded (all of them) on startup, causing a long startup time and 
+        high memory usage.  <br><br>
 
-        <br><br><br>
-        <span class="content_main_bold">November 9, 2010 ~ Data Crow 3.9 BETA VIII has been released</span><br><br>
-        This is the last beta version before the production version is released.<br>
-
-        <br><br><br>
-        <span class="content_main_bold">November 5, 2010 ~ Data Crow 3.9 BETA VI has been released</span><br><br>
-        This will, hopefully, be the last beta for a while. The following has been fixed /changed since the previous beta versions: <br>
-        - Table view; many broken features<br>
-        - Extremely slow Auto Numberer and Title Rewriter<br>
-        - Create Multiple was no longer working<br>
-        - Slow web client / server<br>
-
-        <br><br><br>
-        <span class="content_main_bold">November 4, 2010 ~ Data Crow 3.9 BETA V has been released</span><br><br>
-        Severe upgrade errors have been fixed.
-
-        <br><br><br>
-        <span class="content_main_bold">November 3, 2010 ~ Data Crow 3.9 BETA IV has been released</span><br><br>
-        Fixes the disappearing images and references bug as well improves the performance of the quick view.
-
-        <br><br><br>
-        <span class="content_main_bold">November 2, 2010 ~ Data Crow 3.9 BETA III has been released</span><br><br>
-        Several fixes and small changes.
-
-        <br><br><br>
-        <span class="content_main_bold">October 29, 2010 ~ Data Crow 3.9 BETA II has been released</span><br><br>
-   	    An exciting new version! Major perfomance improvements and loads of fixes. This version does not deliver any
-        new functionality. It is however a total makeover (although internally) of the product. Memory usage has been 
-        minimized as well as processor time required.
-        This is the 2nd beta and should be tested by anyone willing to help out. See the change log for the details.
+        The new data layer increases the startup time of the product and lowers the memory 
+        requirements. On the down side you might notice a slight performance decrease when 
+        scrolling up and down in the views. This is because Data Crow now loads the items
+        when they become visible on screen. Due to a smart caching mechanism the performance
+        decrease has been kept as minimal as possible. On the plus side the grouping pane and
+        the startup time have improved significantly (by about 75%). Additionally it is now
+        possible to load a large database just as quickly as a small database, with the
+        same memory requirements!
 
         <br><br><br>
         <span class="content_main_bold">June 19, 2010 ~ Data Crow 3.8.16 has been released</span><br><br>
@@ -185,6 +164,11 @@
 
 	<br><br>
 
+	<span class="content_main_bold">November 15, 2010<br>Data Crow 3.9 has been released</span><br><br>
+	This new version delivers a major performance improvement.
+    
+	<br><br>
+
     <span class="content_main_bold">June 19, 2010<br>Data Crow 3.8.16 has been released</span><br><br>
     This version includes minor bug fixes only.
 
@@ -194,11 +178,6 @@
 
     <span class="content_main_bold">June 15, 2010<br>Data Crow 3.8.15 has been released</span><br><br>
     Contains important bug fixes and small improvements to the product.
-
-	<br><br>
-
-	<span class="content_main_bold">May 27, 2010<br>Data Crow 3.8.14 has been released</span><br><br>
-	Contains the fix for the item wizard. Retrieved pictures are now stored.
 
     <!-- NEWS END -->
 
@@ -224,9 +203,9 @@
   <!-- DOWNLOAD -->
 
   <tr>
-    <td class="menu2" onClick=window.top.location.href='http://downloads.sourceforge.net/project/datacrow/Production%20versions/3.8.16/datacrow_3_8_16_zipped.zip' onmouseover=this.className='menu2o' onMouseOut=this.className='menu2'>Zipped</td>
-    <td class="menu3" onClick=window.top.location.href='http://downloads.sourceforge.net/project/datacrow/Production%20versions/3.8.16/datacrow_3_8_16_installer.zip' onmouseover=this.className='menu3o' onMouseOut=this.className='menu3'>Installer</td>
-    <td class="menu4" onClick=window.top.location.href='http://downloads.sourceforge.net/project/datacrow/Production%20versions/3.8.16/datacrow_3_8_16_windows_installer.zip' onmouseover=this.className='menu4o' onMouseOut=this.className='menu4'>Winstaller</td>
+    <td class="menu2" onClick=window.top.location.href='http://downloads.sourceforge.net/project/datacrow/Production%20versions/3.9.0/datacrow_3_9_0_zipped.zip' onmouseover=this.className='menu2o' onMouseOut=this.className='menu2'>Zipped</td>
+    <td class="menu3" onClick=window.top.location.href='http://downloads.sourceforge.net/project/datacrow/Production%20versions/3.9.0/datacrow_3_9_0_installer.zip' onmouseover=this.className='menu3o' onMouseOut=this.className='menu3'>Installer</td>
+    <td class="menu4" onClick=window.top.location.href='http://downloads.sourceforge.net/project/datacrow/Production%20versions/3.9.0/datacrow_3_9_0_windows_installer.zip' onmouseover=this.className='menu4o' onMouseOut=this.className='menu4'>Winstaller</td>
   </tr>
   <tr>
     <td height="10" colspan="3"></td>
@@ -243,7 +222,7 @@
     <td height="10" colspan="3"></td>
     </tr>
   <tr>
-    <td colspan="3" class="menu10" onClick=window.top.location.href='http://downloads.sourceforge.net/project/datacrow/Production%20versions/3.8.16/datacrow_3_8_16_source.zip' onmouseover=this.className='menu10o' onMouseOut=this.className='menu10'>Source code</td>
+    <td colspan="3" class="menu10" onClick=window.top.location.href='http://downloads.sourceforge.net/project/datacrow/Production%20versions/3.9.0/datacrow_3_9_0_source.zip' onmouseover=this.className='menu10o' onMouseOut=this.className='menu10'>Source code</td>
   </tr>
 
   <!-- END DOWNLOAD -->
