--- a/homepage/history.html
+++ b/homepage/history.html
@@ -100,6 +100,13 @@
     <td valign="top" class="content_main">
 
     <!-- NEWS -->
+    
+    <span class="content_main_bold">Latest news</span>
+   
+    <br><br>
+
+    <span class="content_main_bold">January 3, 2011<br>Data Crow 3.9.1 has been released</span><br><br>
+    Contains important bug fixes and performance improvements.
 
 	<br><br>
 
@@ -110,13 +117,6 @@
 
     <span class="content_main_bold">June 19, 2010<br>Data Crow 3.8.16 has been released</span><br><br>
     This version includes minor bug fixes only.
-
-    <span class="content_main_bold">Latest news</span>
-
-	<br><br>
-
-    <span class="content_main_bold">June 15, 2010<br>Data Crow 3.8.15 has been released</span><br><br>
-    Contains important bug fixes and small improvements to the product.
 
     <!-- NEWS END -->
 
@@ -143,9 +143,9 @@
   <!-- DOWNLOAD -->
 
   <tr>
-    <td class="menu2" onClick=window.top.location.href='http://downloads.sourceforge.net/project/datacrow/Production%20versions/3.9.0/datacrow_3_9_0_zipped.zip' onmouseover=this.className='menu2o' onMouseOut=this.className='menu2'>Zipped</td>
-    <td class="menu3" onClick=window.top.location.href='http://downloads.sourceforge.net/project/datacrow/Production%20versions/3.9.0/datacrow_3_9_0_installer.zip' onmouseover=this.className='menu3o' onMouseOut=this.className='menu3'>Installer</td>
-    <td class="menu4" onClick=window.top.location.href='http://downloads.sourceforge.net/project/datacrow/Production%20versions/3.9.0/datacrow_3_9_0_windows_installer.zip' onmouseover=this.className='menu4o' onMouseOut=this.className='menu4'>Winstaller</td>
+    <td class="menu2" onClick=window.top.location.href='http://downloads.sourceforge.net/project/datacrow/Production%20versions/3.9.1/datacrow_3_9_1_zipped.zip' onmouseover=this.className='menu2o' onMouseOut=this.className='menu2'>Zipped</td>
+    <td class="menu3" onClick=window.top.location.href='http://downloads.sourceforge.net/project/datacrow/Production%20versions/3.9.1/datacrow_3_9_1_installer.zip' onmouseover=this.className='menu3o' onMouseOut=this.className='menu3'>Installer</td>
+    <td class="menu4" onClick=window.top.location.href='http://downloads.sourceforge.net/project/datacrow/Production%20versions/3.9.1/datacrow_3_9_1_windows_installer.zip' onmouseover=this.className='menu4o' onMouseOut=this.className='menu4'>Winstaller</td>
   </tr>
   <tr>
     <td height="10" colspan="3"></td>
@@ -162,7 +162,7 @@
     <td height="10" colspan="3"></td>
     </tr>
   <tr>
-    <td colspan="3" class="menu10" onClick=window.top.location.href='http://downloads.sourceforge.net/project/datacrow/Production%20versions/3.9.0/datacrow_3_9_0_source.zip' onmouseover=this.className='menu10o' onMouseOut=this.className='menu10'>Source code</td>
+    <td colspan="3" class="menu10" onClick=window.top.location.href='http://downloads.sourceforge.net/project/datacrow/Production%20versions/3.9.1/datacrow_3_9_1_source.zip' onmouseover=this.className='menu10o' onMouseOut=this.className='menu10'>Source code</td>
   </tr>
 
   <!-- END DOWNLOAD -->
