--- a/homepage/news.html
+++ b/homepage/news.html
@@ -67,6 +67,11 @@
         can be found <a href="changelog.txt" target="new">here</a>.
 
         <br><br><br>
+        <span class="content_main_bold">January 3, 2011 ~ Data Crow 3.9.1 has been released</span><br><br>
+   	    Many performance improvements and minor bug fixes. One small change is that icons are now shown in item forms and
+        the quick view.
+
+        <br><br><br>
         <span class="content_main_bold">November 15, 2010 ~ Data Crow 3.9 has been released</span><br><br>
         This release delivers a significant, mostly technical, change. The data layer, which 
         is the way for Data Crow to load and display items, has been rewritten.<br>
@@ -161,6 +166,13 @@
     <td valign="top" class="content_main">
 
     <!-- NEWS -->
+    
+    <span class="content_main_bold">Latest news</span>
+   
+    <br><br>
+
+    <span class="content_main_bold">January 3, 2011<br>Data Crow 3.9.1 has been released</span><br><br>
+    Contains important bug fixes and performance improvements.
 
 	<br><br>
 
@@ -171,13 +183,6 @@
 
     <span class="content_main_bold">June 19, 2010<br>Data Crow 3.8.16 has been released</span><br><br>
     This version includes minor bug fixes only.
-
-    <span class="content_main_bold">Latest news</span>
-
-	<br><br>
-
-    <span class="content_main_bold">June 15, 2010<br>Data Crow 3.8.15 has been released</span><br><br>
-    Contains important bug fixes and small improvements to the product.
 
     <!-- NEWS END -->
 
@@ -203,9 +208,9 @@
   <!-- DOWNLOAD -->
 
   <tr>
-    <td class="menu2" onClick=window.top.location.href='http://downloads.sourceforge.net/project/datacrow/Production%20versions/3.9.0/datacrow_3_9_0_zipped.zip' onmouseover=this.className='menu2o' onMouseOut=this.className='menu2'>Zipped</td>
-    <td class="menu3" onClick=window.top.location.href='http://downloads.sourceforge.net/project/datacrow/Production%20versions/3.9.0/datacrow_3_9_0_installer.zip' onmouseover=this.className='menu3o' onMouseOut=this.className='menu3'>Installer</td>
-    <td class="menu4" onClick=window.top.location.href='http://downloads.sourceforge.net/project/datacrow/Production%20versions/3.9.0/datacrow_3_9_0_windows_installer.zip' onmouseover=this.className='menu4o' onMouseOut=this.className='menu4'>Winstaller</td>
+    <td class="menu2" onClick=window.top.location.href='http://downloads.sourceforge.net/project/datacrow/Production%20versions/3.9.1/datacrow_3_9_1_zipped.zip' onmouseover=this.className='menu2o' onMouseOut=this.className='menu2'>Zipped</td>
+    <td class="menu3" onClick=window.top.location.href='http://downloads.sourceforge.net/project/datacrow/Production%20versions/3.9.1/datacrow_3_9_1_installer.zip' onmouseover=this.className='menu3o' onMouseOut=this.className='menu3'>Installer</td>
+    <td class="menu4" onClick=window.top.location.href='http://downloads.sourceforge.net/project/datacrow/Production%20versions/3.9.1/datacrow_3_9_1_windows_installer.zip' onmouseover=this.className='menu4o' onMouseOut=this.className='menu4'>Winstaller</td>
   </tr>
   <tr>
     <td height="10" colspan="3"></td>
@@ -222,7 +227,7 @@
     <td height="10" colspan="3"></td>
     </tr>
   <tr>
-    <td colspan="3" class="menu10" onClick=window.top.location.href='http://downloads.sourceforge.net/project/datacrow/Production%20versions/3.9.0/datacrow_3_9_0_source.zip' onmouseover=this.className='menu10o' onMouseOut=this.className='menu10'>Source code</td>
+    <td colspan="3" class="menu10" onClick=window.top.location.href='http://downloads.sourceforge.net/project/datacrow/Production%20versions/3.9.1/datacrow_3_9_1_source.zip' onmouseover=this.className='menu10o' onMouseOut=this.className='menu10'>Source code</td>
   </tr>
 
   <!-- END DOWNLOAD -->
