*** empty log message ***

--- a/help/tools/update_all.html
+++ b/help/tools/update_all.html
@@ -6,7 +6,7 @@
     
     <h1>Update All</h1>
 
-    The Update All function is accessed via the right-click menu. This functionality allows you to quickly set selected fields within a view to a common value. The update is performed on screen only-you still have to save the update by pressing "save".
+    The Update All function is accessed via the right-click menu. This functionality allows you to quickly set selected fields within a view to a common value.
 
   </body>
 </html>
