--- a/homepage/news.html
+++ b/homepage/news.html
@@ -67,7 +67,11 @@
         can be found <a href="changelog.txt" target="new">here</a>.
 
         <br><br><br>
-        <span class="content_main_bold">January 25, 2011 ~ Data Crow 3.9.2 has been released</span><br><br>
+        <span class="content_main_bold">February 06, 2011 ~ Data Crow 3.9.4 has been released</span><br><br>
+         This release contains important bug fixes. Imdb.com service was broken as well as the file importer for images. The upgrade process from version 3.9.x to 3.9.4 took a long time due to extensive logging and could even fail because of this. <br>Additionally I have added a first implementation of the glorious Dutch movie site called MovieMeter.nl.
+
+<br><br><br>
+        <span class="content_main_bold">January 25, 2011 ~ Data Crow 3.9.3 has been released</span><br><br>
    	    Small improvements, a new tool called Find and Replace and bug fixes.
 
         <br><br><br>
@@ -175,7 +179,8 @@
 
     <!-- NEWS -->
     
-    <span class="content_main_bold">Latest news</span>
+    <span class="content_main_bold">Latest news</span><br><br>
+        <span class="content_main_bold">February 06, 2011<br>Data Crow 3.9.4 has been released</span><br><br>Important bug fixes.
     
 	<br><br>
 
@@ -187,12 +192,9 @@
     <span class="content_main_bold">January 7, 2011<br>Data Crow 3.9.2 has been released</span><br><br>
     This version includes minor bug fixes and changes.
    
-    <br><br>
+  
 
-    <span class="content_main_bold">January 3, 2011<br>Data Crow 3.9.1 has been released</span><br><br>
-    Contains important bug fixes and performance improvements.
-
-    <!-- NEWS END -->
+<!-- NEWS END -->
 
   </td>
 
@@ -216,9 +218,9 @@
   <!-- DOWNLOAD -->
 
   <tr>
-    <td class="menu2" onClick=window.top.location.href='http://downloads.sourceforge.net/project/datacrow/Production%20versions/3.9.3/datacrow_3_9_3_zipped.zip' onmouseover=this.className='menu2o' onMouseOut=this.className='menu2'>Zipped</td>
-    <td class="menu3" onClick=window.top.location.href='http://downloads.sourceforge.net/project/datacrow/Production%20versions/3.9.3/datacrow_3_9_3_installer.zip' onmouseover=this.className='menu3o' onMouseOut=this.className='menu3'>Installer</td>
-    <td class="menu4" onClick=window.top.location.href='http://downloads.sourceforge.net/project/datacrow/Production%20versions/3.9.3/datacrow_3_9_3_windows_installer.zip' onmouseover=this.className='menu4o' onMouseOut=this.className='menu4'>Winstaller</td>
+    <td class="menu2" onClick=window.top.location.href='http://downloads.sourceforge.net/project/datacrow/Production%20versions/3.9.4/datacrow_3_9_4_zipped.zip' onmouseover=this.className='menu2o' onMouseOut=this.className='menu2'>Zipped</td>
+    <td class="menu3" onClick=window.top.location.href='http://downloads.sourceforge.net/project/datacrow/Production%20versions/3.9.4/datacrow_3_9_4_installer.zip' onmouseover=this.className='menu3o' onMouseOut=this.className='menu3'>Installer</td>
+    <td class="menu4" onClick=window.top.location.href='http://downloads.sourceforge.net/project/datacrow/Production%20versions/3.9.4/datacrow_3_9_4_windows_installer.zip' onmouseover=this.className='menu4o' onMouseOut=this.className='menu4'>Winstaller</td>
   </tr>
   <tr>
     <td height="10" colspan="3"></td>
@@ -235,7 +237,7 @@
     <td height="10" colspan="3"></td>
     </tr>
   <tr>
-    <td colspan="3" class="menu10" onClick=window.top.location.href='http://downloads.sourceforge.net/project/datacrow/Production%20versions/3.9.3/datacrow_3_9_3_source.zip' onmouseover=this.className='menu10o' onMouseOut=this.className='menu10'>Source code</td>
+    <td colspan="3" class="menu10" onClick=window.top.location.href='http://downloads.sourceforge.net/project/datacrow/Production%20versions/3.9.4/datacrow_3_9_4_source.zip' onmouseover=this.className='menu10o' onMouseOut=this.className='menu10'>Source code</td>
   </tr>
 
   <!-- END DOWNLOAD -->
