--- a/homepage/screenshots.html
+++ b/homepage/screenshots.html
@@ -98,7 +98,8 @@
 
     <!-- NEWS -->
     
-    <span class="content_main_bold">Latest news</span>
+    <span class="content_main_bold">Latest news</span><br><br>
+        <span class="content_main_bold">February 06, 2011<br>Data Crow 3.9.4 has been released</span><br><br>Important bug fixes.
     
 	<br><br>
 
@@ -110,12 +111,9 @@
     <span class="content_main_bold">January 7, 2011<br>Data Crow 3.9.2 has been released</span><br><br>
     This version includes minor bug fixes and changes.
    
-    <br><br>
+  
 
-    <span class="content_main_bold">January 3, 2011<br>Data Crow 3.9.1 has been released</span><br><br>
-    Contains important bug fixes and performance improvements.
-
-    <!-- NEWS END -->
+<!-- NEWS END -->
 
   </td>
 
@@ -139,9 +137,9 @@
   <!-- DOWNLOAD -->
 
   <tr>
-    <td class="menu2" onClick=window.top.location.href='http://downloads.sourceforge.net/project/datacrow/Production%20versions/3.9.3/datacrow_3_9_3_zipped.zip' onmouseover=this.className='menu2o' onMouseOut=this.className='menu2'>Zipped</td>
-    <td class="menu3" onClick=window.top.location.href='http://downloads.sourceforge.net/project/datacrow/Production%20versions/3.9.3/datacrow_3_9_3_installer.zip' onmouseover=this.className='menu3o' onMouseOut=this.className='menu3'>Installer</td>
-    <td class="menu4" onClick=window.top.location.href='http://downloads.sourceforge.net/project/datacrow/Production%20versions/3.9.3/datacrow_3_9_3_windows_installer.zip' onmouseover=this.className='menu4o' onMouseOut=this.className='menu4'>Winstaller</td>
+    <td class="menu2" onClick=window.top.location.href='http://downloads.sourceforge.net/project/datacrow/Production%20versions/3.9.4/datacrow_3_9_4_zipped.zip' onmouseover=this.className='menu2o' onMouseOut=this.className='menu2'>Zipped</td>
+    <td class="menu3" onClick=window.top.location.href='http://downloads.sourceforge.net/project/datacrow/Production%20versions/3.9.4/datacrow_3_9_4_installer.zip' onmouseover=this.className='menu3o' onMouseOut=this.className='menu3'>Installer</td>
+    <td class="menu4" onClick=window.top.location.href='http://downloads.sourceforge.net/project/datacrow/Production%20versions/3.9.4/datacrow_3_9_4_windows_installer.zip' onmouseover=this.className='menu4o' onMouseOut=this.className='menu4'>Winstaller</td>
   </tr>
   <tr>
     <td height="10" colspan="3"></td>
@@ -158,7 +156,7 @@
     <td height="10" colspan="3"></td>
     </tr>
   <tr>
-    <td colspan="3" class="menu10" onClick=window.top.location.href='http://downloads.sourceforge.net/project/datacrow/Production%20versions/3.9.3/datacrow_3_9_3_source.zip' onmouseover=this.className='menu10o' onMouseOut=this.className='menu10'>Source code</td>
+    <td colspan="3" class="menu10" onClick=window.top.location.href='http://downloads.sourceforge.net/project/datacrow/Production%20versions/3.9.4/datacrow_3_9_4_source.zip' onmouseover=this.className='menu10o' onMouseOut=this.className='menu10'>Source code</td>
   </tr>
 
   <!-- END DOWNLOAD -->
