--- a/homepage/history.html
+++ b/homepage/history.html
@@ -72,7 +72,9 @@
 
         <br><br><br>
         <span class="content_main_bold">CD Library</span><br><br>
-        In 2002, February to be exact, I discovered Sourceforge.net and decided to make my little project public. I also decided to change the name from LibCD to CD Library. This software allowed registration of software and mp3's. I would like to say it had two modules, but then I would be lying. The software was static and users had only very limited control over the behavior of the product. It was able to import a sort of CSV file (via a very complex UI) and was also capable of parsing information from MP3 files. Again this version did not really get anyone excited and I remained the sole user. The latest version of CD Library is still available for download at: <a href="http://sourceforge.net/projects/libcd/">Sourceforge.net</a>.
+        In 2002, February to be exact, I discovered Sourceforge.net and decided to make my little project public. I also decided to change the name from LibCD to CD Library. This software allowed registration of software and mp3's. I would like to say it had two modules, but then I would be lying. The software was static and users had only very limited control over the behavior of the product. It was able to import a sort of CSV file (via a very complex UI) and was also capable of parsing information from MP3 files. Again this version did not really get anyone excited and I remained the sole user. 
+        People are so used to advanced <a href="http://www.o2.co.uk/">Business Phones</a>  and various other bits of software that can do so much which makes it hard to make an impact in the world of technology.  
+        The latest version of CD Library is still available for download at: <a href="http://sourceforge.net/projects/libcd/">Sourceforge.net</a>.
 
         <br><br><br>
         <span class="content_main_bold">Data Crow</span><br><br>
@@ -103,9 +105,9 @@
     <!-- NEWS -->
     
     <span class="content_main_bold">Latest news</span><br><br>
+        <span class="content_main_bold">May 12, 2011<br>Data Crow 3.9.7 has been released</span><br><br>Contains various bug fixes<br><br>
         <span class="content_main_bold">April 1, 2011<br>Data Crow 3.9.6 has been released</span>  <br><br>Contains important bug fixes related to performance<br><br>
-        <span class="content_main_bold">February 13, 2011<br>Data Crow 3.9.5 has been released</span>  <br><br>Important bug fixes.<br><br>
-        <span class="content_main_bold">February 06, 2011<br>Data Crow 3.9.4 has been released</span>
+        <span class="content_main_bold">February 13, 2011<br>Data Crow 3.9.5 has been released</span>
 
 <!-- NEWS END -->
 
@@ -133,9 +135,9 @@
   <!-- DOWNLOAD -->
 
   <tr>
-    <td class="menu2" onClick=window.top.location.href='http://downloads.sourceforge.net/project/datacrow/Production%20versions/3.9.6/datacrow_3_9_6_zipped.zip' onmouseover=this.className='menu2o' onMouseOut=this.className='menu2'>Zipped</td>
-    <td class="menu3" onClick=window.top.location.href='http://downloads.sourceforge.net/project/datacrow/Production%20versions/3.9.6/datacrow_3_9_6_installer.zip' onmouseover=this.className='menu3o' onMouseOut=this.className='menu3'>Installer</td>
-    <td class="menu4" onClick=window.top.location.href='http://downloads.sourceforge.net/project/datacrow/Production%20versions/3.9.6/datacrow_3_9_6_windows_installer.zip' onmouseover=this.className='menu4o' onMouseOut=this.className='menu4'>Winstaller</td>
+    <td class="menu2" onClick=window.top.location.href='http://downloads.sourceforge.net/project/datacrow/Production%20versions/3.9.7/datacrow_3_9_7_zipped.zip' onmouseover=this.className='menu2o' onMouseOut=this.className='menu2'>Zipped</td>
+    <td class="menu3" onClick=window.top.location.href='http://downloads.sourceforge.net/project/datacrow/Production%20versions/3.9.7/datacrow_3_9_7_installer.zip' onmouseover=this.className='menu3o' onMouseOut=this.className='menu3'>Installer</td>
+    <td class="menu4" onClick=window.top.location.href='http://downloads.sourceforge.net/project/datacrow/Production%20versions/3.9.7/datacrow_3_9_7_windows_installer.zip' onmouseover=this.className='menu4o' onMouseOut=this.className='menu4'>Winstaller</td>
   </tr>
   <tr>
     <td height="10" colspan="3"></td>
@@ -152,7 +154,7 @@
     <td height="10" colspan="3"></td>
     </tr>
   <tr>
-    <td colspan="3" class="menu10" onClick=window.top.location.href='http://downloads.sourceforge.net/project/datacrow/Production%20versions/3.9.6/datacrow_3_9_6_source.zip' onmouseover=this.className='menu10o' onMouseOut=this.className='menu10'>Source code</td>
+    <td colspan="3" class="menu10" onClick=window.top.location.href='http://downloads.sourceforge.net/project/datacrow/Production%20versions/3.9.7/datacrow_3_9_7_source.zip' onmouseover=this.className='menu10o' onMouseOut=this.className='menu10'>Source code</td>
   </tr>
 
   <!-- END DOWNLOAD -->
