--- a/help/items/sort.html
+++ b/help/items/sort.html
@@ -6,6 +6,8 @@
 <body>
 
     <h1>Sorting Items</h1>
+    <i>Right-click in item view &gt; Select Sort</i><br><br>
+    
     Items can be sorted by right clicking on the view and selecting the sort option. The items in the view are sorted on the fields shown in the right
     panel. The available fields (on which can be sorted) are displayed on the left panel. Fields can be moved by double clicking on them.
 
