--- a/help/items/templates.html
+++ b/help/items/templates.html
@@ -4,6 +4,8 @@
   </head>
   <body>
     <h1>Templates</h1>
+    <i>Menu Path: Administration &gt; Maintain Templates</i><br><br>
+    
     	In case you want to assign certain default values to newly created items you can define these values in a template.
     	The template functionality can be found in the "administration" menu.
 
