--- a/help/modules/altermodulewizard.html
+++ b/help/modules/altermodulewizard.html
@@ -5,6 +5,7 @@
   <body>
   
     <h1>Altering an existing module</h1>
+    <i>Menu path: Modules &gt; Alter Module Wizard</i><br><br>
 
 	In the main screen of Data Crow you'll find a menu called "modules". This menu contains wizards to customize, create and relate modules. 
 	In this chapter we will dive into the alteration of an existing module. This wizard is almost exactly the same as the "Create Module Wizard".
@@ -19,8 +20,8 @@
     <h2>Filling the basic information</h2>
     See the <a href="createmodulewizard.html">"Create Module Wizard"</a>.
 
-    <h2>Defining fields</h2>
-    See the <a href="createmodulewizard.html">"Create Module Wizard"</a>.
+    <h1>Defining fields</h1>
+    See the <a href="definingfields.html">"Defining Fields"</a>.
 
     <h1>Finishing the Wizard</h1>
     After all information has been supplied press the "finish" button or the "finish & new" button. The "finish" button finishes the module alteration process. Data Crow needs to restart before the changes can become apparent. The "finish & new" button finishes the module alteration process and restarts the wizard (which can be useful when you want to alter more then one module). 
