--- a/help/modules/deletemodulewizard.html
+++ b/help/modules/deletemodulewizard.html
@@ -5,6 +5,7 @@
   <body>
   
     <h1>Deleting modules</h1>
+    <i>Menu path: Modules &gt; Delete Module Wizard</i><br><br>
 	
 	Allows you to delete a custom module. A custom module is a module created by using
 	the module creation wizard. Note that it is always wise to make a backup of Data Crow
