--- a/help/modules/exportmodulewizard.html
+++ b/help/modules/exportmodulewizard.html
@@ -5,6 +5,7 @@
   <body>
 
     <h1>Exporting a module</h1>
+    <i>Menu path: Modules &gt; Export Module Wizard</i><br><br>
 
     If you have created a nice new module and you want to share it with other users you can use the Export Module wizard.
     This wizard can be found in "modules" menu.
