--- a/help/modules/relatemodulewizard.html
+++ b/help/modules/relatemodulewizard.html
@@ -5,6 +5,7 @@
   <body>
   
     <h1>Relating modules</h1>
+    <i>Menu path: Modules &gt; Relate Module Wizard</i><br><br>
 
 	In the main screen of Data Crow you'll find a menu called "modules". This menu contains wizards to customize, create and relate modules. 
 	In this chapter is explained how you can relate two modules. Using this wizard you can make a parent child relation between two modules. 
