--- a/help/onlinesearch/onlinesearch.html
+++ b/help/onlinesearch/onlinesearch.html
@@ -4,6 +4,7 @@
   </head>
   <body>
     <h1>Online Searching</h1>
+    <i>Menu path: Tools &gt; Online Search</i><br><br>
 
 	Data Crow can save you time by retrieving information about an item from an online database such as Amazon, IMDb, or freedb.
 
