--- a/help/reports/reporting.html
+++ b/help/reports/reporting.html
@@ -6,6 +6,8 @@
   <body>
 
     <h1>Reporting</h1>
+    <i>Menu path: Tools &gt; Create Report</i><br>
+    <i>or: right-click on selected items in view and select Create Report</i><br><br>
 
     The reporting tool creates PDF amd HTML files based on items retrieved via a search.
     To create a report select a format (either PDF or HTML) and a report type from the dropdown box. Select a target file and press "run" to start the report generation.
@@ -38,11 +40,11 @@
 
     <h2>Report examples</h2>
 
-    <img src="./images/report_list_example.JPG" alt="" width="529" height="217" border="0">
+    <img src="./images/report_list_example.JPG" alt="" border="0">
 
     <br><br>
 
-    <img src="./images/report_card_example.JPG" alt="" width="529" height="390" border="0">
+    <img src="./images/report_card_example.JPG" alt="" border="0">
 
   </body>
 </html>
