--- a/help/security/security.html
+++ b/help/security/security.html
@@ -4,6 +4,7 @@
   </head>
   <body>
     <h1>Security</h1>
+    <i>Module Bar &gt; Users</i><br><br>
 
 		By default any user starting your installation of Data Crow will see all the information you
 		entered. Any user could even change or delete your items.<br>
@@ -26,10 +27,12 @@
 		
 		<h2>Administrators</h2>
 		Some operations are only allowed for administrators:
+		<ul>
 		<li>Removing / deleting items.</li>
 		<li>Changing the application settings.</li>
 		<li>User administration.</li>
 		<li>Creating templates.</li>
+		</ul>
 		
 		<h2>Module permissions</h2>
 		In the Module Permission you can set the module and field access for the user. For each field you have the 
@@ -48,6 +51,7 @@
 		field.
 		
 		<h2>Changing the password</h2>
+		<i>Menu path: User &gt; Change Password</i><br><br>
 		By default the password for each users has not been set. From the "user" menu you can change your password ("Change password").
 		First enter your old password (or leave empty if no password has been set) then enter your new password twice.
   </body>
