--- a/help/settings/directoriesasdrives.html
+++ b/help/settings/directoriesasdrives.html
@@ -5,6 +5,7 @@
   <body>
 
     <h1>Directories as Drives</h1>
+    <i>Menu path: Settings &gt; Settings &gt; Directories as Drives</i><br>
     
     Not all platforms have or know the concept of a drive. To make your life easier within Data Crow (especially when working with the Drive Manager)  
     you can define which directories should be considered as drives. <br>
