--- a/help/settings/drivemappings.html
+++ b/help/settings/drivemappings.html
@@ -5,6 +5,7 @@
   <body>
 
     <h1>Drive Mappings</h1>
+    <i>Menu path: Settings &gt; Settings &gt; Drive Mappings</i><br>
 
     In case a drive letter has been changed you can map this within Data Crow. This ensures that file paths stored in Data Crow still work.
     An example for a mapping is: D:\ maps to E:\. The filename D:\TEST\TEST.MP3 will now become E:\TEST\TEST.MP3. The path as stored in Data Crow
