--- a/help/settings/fields.html
+++ b/help/settings/fields.html
@@ -5,7 +5,9 @@
   <body>
     
     <h1>General Field Settings</h1>
-    Via this dialog the order of the fields and which fields are used can be indicated. 
+    <i>Menu path: Settings &gt; General Field Settings</i><br>
+    
+    Using the general field settings the properties of each each of the fields can be changed. 
 
     <h2>Renaming a field</h2>
     The label of each field can be changed. On the left the original label name is displayed. This is the default value. A new label value can be entered in the "Custom Label" column. Press "save changes" to save and apply the field settings.
