--- a/help/settings/filehash.html
+++ b/help/settings/filehash.html
@@ -4,6 +4,8 @@
   </head>
   <body>
 	    <h1>File Hashing</h1>
+	    <i>Menu path: Settings &gt; Settings &gt; File Hashing</i><br>
+	    
 		Data Crow creates hashes for files to be able to uniquely identify them. 
 		The Drive Manager is one of the tools that uses the file hash to find moved files.
 	
