--- a/help/settings/module.html
+++ b/help/settings/module.html
@@ -6,8 +6,11 @@
   <body>
 
     <h1>Enabled Modules</h1>
+    <i>Menu path: Settings &gt; Settings &gt; Enabled Modules</i><br>
 
-    In case you don't use a certain module, you can disable this module here. The items belonging to this module will not be removed. Simple uncheck the checkbox to disbale a module and check it to enable a module. Press "save" and the settings are applied.
+    In case you don't use a certain module, you can disable this module here. 
+    The items belonging to this module will not be removed. Simple uncheck the checkbox to disbale a module and 
+    check it to enable a module. Press "save" and the settings are applied.
 
     <h2>Disabling the Loan functionality</h2>
     In case you are not using the loan system you can disable this functionality by disabling the "contact person" module.
