--- a/help/settings/webfields.html
+++ b/help/settings/webfields.html
@@ -5,6 +5,8 @@
   <body>
     
     <h1>Web Field Settings</h1>
+    <i>Menu path: Settings &gt; Settings &gt; Web Field Settings</i><br>
+    
     Here you can define which fields to display in the item overview pages and
     in which order.
 
