--- a/help/tools/auto_numbering.html
+++ b/help/tools/auto_numbering.html
@@ -4,6 +4,8 @@
   </head>
   <body>
     <h1>Auto numbering</h1>
+    <i>Menu path: Tools &gt; Auto Numbering</i><br><br>
+    
 	Gives an item a unique number. The number can be overwritten by you afterwards. There are several option available for the auto numbering feature.
 
 	<h2>Enabled</h2>
