--- a/help/tools/drivemanager.html
+++ b/help/tools/drivemanager.html
@@ -5,6 +5,7 @@
 
 <body>
 	<h1>Drive Manager</h1>
+	<i>Menu path: Tools &gt; Drive Manager</i><br><br>
 
 	There are modules which contain items representing a file (or a directory)
 	such as the Music Album and the Image module. The Drive Manager ensures the file information 
