--- a/help/tools/expert_user.html
+++ b/help/tools/expert_user.html
@@ -5,6 +5,7 @@
 
 <body>
 	<h1>Expert User Tool</h1>
+	<i>Menu path: Tools &gt; Expert User</i><br><br>
 
 	The expert user tool shows system information, contains maintenance tools, and offers a direct connection to the database.
 
