--- a/help/tools/fileinformationimport.html
+++ b/help/tools/fileinformationimport.html
@@ -5,26 +5,38 @@
   <body>
 
     <h1>Importing File Information</h1>
+    <i>Menu path: Tools &gt; "Item name" File Import </i><br><br>
 
 	Using the import feature you can quickly retrieve information from
   	the CD-Rom or hard drive. This feature is found in the &#8220;Tools&#8221; menu and
   	has the name &#8216;X import&#8217; (where X is the module name).
 
-
-	<h1>Files and Directories</h1>
-	Here you can select the files to import. Navigate the tree and tick the directories and/or filed from which you would like to import the content.
-	If you cannot find the location you are looking for you can simple add by pressing the add button right next to the drives drop down.
-	From there you can add any location and it will usable within the while system.
-
+	<h1>Directories / Files</h1>
+	Here you can select the files to import. <br>
+	
+	<img src="./images/fileimport_directoriesandfiles.png" /><br><br>
+	
+	<ul>
+	<li><b>Select Directory</b> Select a directory in which the file importer should look for files. In case the recursive option is selected
+	the file importer will scan the selected directory for files as well as any sub folder of the directory. The Start button starts the file lookup.
+	Each found file is added to the files table.</li>
+	<li><b>Select a File</b> Select a specific file from which the information should be parsed. The selected file is added to the files table.</li>
+	</ul>
+	
+	<br>
+	All found files are added to the files table.<br>
+	<img src="./images/fileimport_directoriesandfiles_files.png" /> <br><br>
+	Each of the checked files will be processed when the actual file import is started.	
+		
 	<h1>Settings</h1>
 
-    <lu>
+    <ul>
     <li><i>Container</i>
          <br>Select the container for the imported items. A container can be anything, for example a CD suitcase.</li>
     <li><i>Storage Medium</i>
          <br>Optionally you can select the Storage Media type on which the to be imported data resides. 
              The storage medium indicates on which type of media the item is stored (CD, DVD, etc.). </li>
-    </lu>
+    </ul>
 
     <h2>Directory usage information</h2>
     Allows directory information to be used for filling fields like the title, album name or artist name (these last two are only available for the music album module). The available options might vary depending on the module you are using.
