--- a/help/tools/filerenamer.html
+++ b/help/tools/filerenamer.html
@@ -6,6 +6,8 @@
 <body>
 
 	<h1>File Renamer</h1>
+	<i>Menu path: Tools &gt; File Renamer </i><br><br>
+	
     With this tool files can be renamed and/or moved, using the information entered in Data Crow.
     Files are renamed by using a 'pattern'. A pattern is a small script made up out of tags which
     are replaced by actual values when used &amp; applied. 
