--- a/help/items/inserting.html
+++ b/help/items/inserting.html
@@ -5,27 +5,28 @@
 
 <body>
     <h1>New items view</h1>
+    
+    <img src="./images/new_item_tab.png" /><br>
+       
     The view in the new items tab shows all new items. Tools such as the File Import and the CD Import
-    add items to this view. These items are NOT present in the database. To save these items press "save".
+    can add items to this view. These items are NOT present in the database. To save these items press "save".
 
     <h2>Creating a new item</h2>
     There are several ways you can insert new items:
 
 	<table cellspacing="2" cellpadding="2" border="0">
     	<tr><td>-</td>
-    		<td>Use the item wizard (recommended)</td></tr>
+    		<td>Use the item wizard (recommended) <br>
+    		<img src="./images/itemwizard_toolbar.png" /></td></tr>
     	<tr><td>-</td>
     		<td>Open the &#8220;File&#8221; menu and select &#8220;New item&#8221;.
     	    	This will open the item window. You can either type all the values or use the online search function</td></tr>
-    	<tr><td>-</td>
-    		<td>Press &#8220;Add item&#8221; in the &#8220;New item&#8221;
-        	    tab and enter the values (only available using the table view)</td></tr>
     	<tr><td>-</td>
     		<td>Start the Import dialog. <a href="../tools/fileinformationimport.html" target="main">more about this</a></td></tr>
     	<tr><td>-</td>
     		<td>Search an online database. <a href="../onlinesearch/onlinesearch.html" target="main">more about this</a></td></tr>
     	<tr><td>-</td>
-    		<td>By creating an item based on an existing item. Select an item in the view and select "edit as new" from the right-click menu</a></td></tr>
+    		<td>By creating an item based on an existing item. Select an item in the view and select "Edit as New" from the right-click menu.</td></tr>
 	</table>
 	
 	<h2>Using templates</h2>
