--- a/help/items/views.html
+++ b/help/items/views.html
@@ -5,9 +5,15 @@
   <body>
 
     <h1>Viewing and modifying items</h1>
+    <i>Menu path: View &gt; Card or Table View</i><br><br>
 
-    Items are displayed in a view in the main pane. One row represents one item. Right-clicking on an item opens a sub-menu with further options. Items can be deleted or opened. Items can also be directly modified using the table view.
+	<img src="./images/item_views.png" alt="" border="0"><br><br>
+
+    Items are displayed in a view in the main pane. 
+    Right-clicking on an item opens a sub-menu with further options. Items can be deleted or opened. 
+    Items can also be directly modified using the table view.
     To switch been views go to the View menu option of the menu bar.
+    
 
     <h2>Grouping items</h2>
     Grouping of items is managed using the grouping pane which is explained <a href="../general/grouping_pane.html">here</a>.
