--- a/help/items/wizard.html
+++ b/help/items/wizard.html
@@ -3,12 +3,12 @@
         <link href="../datacrow_help.css" rel="stylesheet" type="text/css">
   </head>
   <body>
-    <h1>
-      The new Item Wizard
-    </h1>
-    <p> The wizard is the easiest way to add a new item. You get help and information for each step in the wizard.<br>	
-    	You can cancel the wizard by pressing "cancel" at any time.
-    </p>
+    <h1>The new Item Wizard</h1>
+    
+    <img src="./images/itemwizard_toolbar.png" alt="" border="0"><br><br>
+    
+    The wizard is the easiest way to add a new item. You get help and information for each step in the wizard. 
+    You can cancel the wizard by pressing "cancel" at any time.
 
   </body>
 </html>
