--- a/help/modules/importmodulewizard.html
+++ b/help/modules/importmodulewizard.html
@@ -5,6 +5,7 @@
   <body>
 
     <h1>Importing a module</h1>
+    <i>Menu path: Modules &gt; Import Module Wizard</i><br><br>
 
     This wizard can be found in the "modules" menu of the main screen and can be used to import a module which was exported using the <a href="./exportmodulewizard.html">Export Module Wizard</>.
 	The wizard is powerful yet very simple to use. In the first step you select the module zip file which you would like to import. In the next and final step the import is started.
