--- a/help/settings/colors.html
+++ b/help/settings/colors.html
@@ -4,6 +4,7 @@
   </head>
   <body>
     <h1>Selection Color</h1>
+    <i>Menu path: Settings &gt; Settings &gt; Selection Colors</i><br>
 
     Change the color used to indicate an item has been selected.
   </body>
