--- a/help/settings/laf.html
+++ b/help/settings/laf.html
@@ -4,6 +4,8 @@
   </head>
   <body>
     <h1>Look and Feel</h1>
+    <i>Menu path: Settings &gt; Look &amp; Feel</i><br>
+    
     A Look and Feel changes the complete visual presentation of an application, the.. look and feel so to speak. Selecting one of the look and feels applies it directly.<br>
 
 	<h2>System Default</h2>
