--- a/help/tools/backup_restore.html
+++ b/help/tools/backup_restore.html
@@ -6,6 +6,8 @@
   <body>
 
     <h1>Backup & Restore</h1>
+    <i>Menu path: Tools &gt; Backup &amp; Restore</i><br><br>
+    
     Once your collection grows and grows it is a good idea to make a backup of your data. Imagine yourself re-entering all the information you have lost by a virus attack, a hard disk crash or .. ! Make sure to make frequent backups and to store them at least on another hard drive within your pc, but preferably on an external medium.
 
     <h2>Creating a backup</h2>
