*** empty log message ***

--- a/help/tools/item_export.html
+++ b/help/tools/item_export.html
@@ -6,6 +6,8 @@
   <body>
 
   <h1>Item Export Wizard</h1>
+  <i>Menu path: Tools &gt; Item Export Wizard</i><br><br>
+  
   The item export wizard allows you to export items to an external file. Items of each module within Data Crow can
   be exported. Before the wizard is started you will be asked to select the module from which you like to export the items.
 
