--- a/help/tools/wizard.html
+++ b/help/tools/wizard.html
@@ -5,6 +5,7 @@
   <body>
 
     <h1>Tool Select Wizard</h1>
+    <i>Menu path: Help &gt; Tool Select Wizard</i><br><br>
 
     A wizard which will help you to select the right tool for the job.
 
