--- a/help/settings/font.html
+++ b/help/settings/font.html
@@ -5,7 +5,7 @@
   <body>
 
     <h1>Fonts</h1>
-    <i>Menu path: Settings &gt; Settings &gt; Font</i><br>
+    <i>Menu path: Settings &gt; Settings &gt; Font</i><br><br>
 
 	Within Data Crow two different fonts are used, fonts for displaying text and fonts used for labels and buttons (etc). You can select the font type, size and style (bold and or italic). An sample of the selected settings is shown on lower part. Once you are happy with your settings press "save" to apply them.
 
