--- a/help/settings/http.html
+++ b/help/settings/http.html
@@ -5,7 +5,7 @@
   <body>
 
     <h1>HTTP Settings</h1>
-    <i>Menu path: Settings &gt; Settings &gt; HTTP Settings</i><br>
+    <i>Menu path: Settings &gt; Settings &gt; HTTP Settings</i><br><br>
 
 	If you are not behind a proxy and / or you have no problems using the online search you can stay away from these settings.
 	In case you are behind a proxy you configure it here.
