--- a/help/settings/itemformsettings.html
+++ b/help/settings/itemformsettings.html
@@ -5,7 +5,7 @@
   <body>
     
     <h1>Item Form Settings</h1>
-    <i>Menu path: Settings &gt; Item Form Settings</i><br>
+    <i>Menu path: Settings &gt; Item Form Settings</i><br><br>
     
     This dialog allows you to maintain the tabs as displayed on the item form. By default, for most modules,
     there are two tabs: Information and Technical Information. 
