--- a/help/settings/laf.html
+++ b/help/settings/laf.html
@@ -4,7 +4,7 @@
   </head>
   <body>
     <h1>Look and Feel</h1>
-    <i>Menu path: Settings &gt; Look &amp; Feel</i><br>
+    <i>Menu path: Settings &gt; Look &amp; Feel</i><br><br>
     
     A Look and Feel changes the complete visual presentation of an application, the.. look and feel so to speak. Selecting one of the look and feels applies it directly.<br>
 
