--- a/help/settings/module.html
+++ b/help/settings/module.html
@@ -6,7 +6,7 @@
   <body>
 
     <h1>Enabled Modules</h1>
-    <i>Menu path: Settings &gt; Settings &gt; Enabled Modules</i><br>
+    <i>Menu path: Settings &gt; Settings &gt; Enabled Modules</i><br><br>
 
     In case you don't use a certain module, you can disable this module here. 
     The items belonging to this module will not be removed. Simple uncheck the checkbox to disbale a module and 
