--- a/help/settings/regional.html
+++ b/help/settings/regional.html
@@ -4,7 +4,7 @@
   </head>
   <body>
     <h1>Regional Settings</h1>
-    <i>Menu path: Settings &gt; Settings &gt; Regional Settings</i><br>
+    <i>Menu path: Settings &gt; Settings &gt; Regional Settings</i>
 
     <h2>Language</h2>
     Select the language of your choice. A restart is advised for the selection to become fully active. 
