--- a/help/settings/fileassociations.html
+++ b/help/settings/fileassociations.html
@@ -5,7 +5,7 @@
   <body>
 
     <h1>File Associations</h1>
-    <i>Menu path: Settings &gt; Settings &gt; File Associations</i><br>
+    <i>Menu path: Settings &gt; Settings &gt; File Associations</i><br><br>
 
 	By default Data Crow will try and find the program to handle each file type. In case this fails (or you want to change the default behaviour) you can select the program to handle certain file types.
 
