--- a/help/settings/general.html
+++ b/help/settings/general.html
@@ -5,7 +5,7 @@
   <body>
   
     <h1>General settings</h1>
-    <i>Menu path: Settings &gt; Settings &gt; General</i><br>
+    <i>Menu path: Settings &gt; Settings &gt; General</i>
 
     <h2>Sorting method for persons</h2>
     Define here how persons should be sorted. The default order will sort persons in the order they have been saved.
