--- a/help/settings/quickview.html
+++ b/help/settings/quickview.html
@@ -4,7 +4,7 @@
   </head>
   <body>
     <h1>Quick View Settings</h1>
-    <i>Menu path: Settings &gt; Quick View Settings</i><br>
+    <i>Menu path: Settings &gt; Quick View Settings</i>
     
     <h2>General Settings</h2>
     If the option "Show pictures in seperate tabs" is enabled each picture (if present) is displayed in a seperate tab as 
