*** empty log message ***

--- a/help/tools/item_import.html
+++ b/help/tools/item_import.html
@@ -6,6 +6,8 @@
   <body>
 
   <h1>Item Import Wizard</h1>
+  <i>Menu path: Tools &gt; Item Import Wizard</i><br><br>
+  
   The item import wizard allows you to import items from an external file. The items are directly imported into the database. Before the wizard is started you will
   have to select the module into which you would like to import the items.
 
