--- a/help/tools/resource_editor.html
+++ b/help/tools/resource_editor.html
@@ -5,6 +5,7 @@
   <body>
     
     <h1>Resource Editor</h1>
+    <i>Menu path: Settings &gt; Resources Editor</i><br><br>
     
     With the resource editor translations can be created. There are several categories of 'resources' such as
     labels and messages. You can either edit one of the available languages or you can choose to create a whole new
