--- a/help/tools/update_all.html
+++ b/help/tools/update_all.html
@@ -5,6 +5,8 @@
   <body>
     
     <h1>Update All</h1>
+    <i>Menu path: Tools &gt; Update all</i><br>
+    <i>or right click on item in the view and select Update all</i><br><br>
 
     The Update All function is accessed via the right-click menu. This functionality allows you to quickly set selected fields within a view to a common value.
 
