--- a/help/webserver/webserver.html
+++ b/help/webserver/webserver.html
@@ -4,6 +4,7 @@
   </head>
   <body>
     <h1>Web Server</h1>
+    <i>Menu path: Web Server &gt; Web Server</i><br>
     
     <p>
     Using this dialog the web server can be configured and started.
