*** empty log message ***

--- a/help/modules/definingfields.html
+++ b/help/modules/definingfields.html
@@ -29,13 +29,26 @@
 	<img src="./images/dialog_definefield.jpg" />
 	
 	<h3>Name</h3>
-	The name of the field as displayed on screen.
+	The name of the field as displayed on screen. 
+	For existing modules the name can be overruled by setting a label in the <a href="../settings/fields.html">General Field Settings</a>.
 	
 	<h3>Can be searched?</h3>
 	Indicates if users can search / filter on this field.
 	
-	<h3>Holds technical information?</h3>
-	Does this field hold technical information. If so the field will be shown in the technical informal tab of the item form.
+	<h3>Required</h3>
+    You can mark a field as a required field. This field must always be filled when saving. The item  will only be saved when all the required fields have been filled.
+	For existing modules change this using the <a href="../settings/fields.html">General Field Settings</a>.
+	
+    <h3>Descriptive?</h3>
+    When a field is marked as descriptive (or a combination of several fields) the value of this field is used to represent the items. 
+    For existing modules change this using the <a href="../settings/fields.html">General Field Settings</a>.
+
+    <h3>Is key field</h3>
+    The combination of the key fields will be used to check if the item already exists <a href="../settings/general.html">(more about this)</a>.
+	For existing modules change this using the <a href="../settings/fields.html">General Field Settings</a>.
+	
+	<h3>Item form tab</h3>
+	Defines the tab of the item form where the field will be placed. For existing modules change this using the <a href="../settings/itemformsettings.html">Item Form Settings</a>.
 	
 	<h3>Maximum field length</h3>
 	The maximum input length for this field (in characters).
