*** empty log message ***

--- a/homepage/download.html
+++ b/homepage/download.html
@@ -73,7 +73,7 @@
 
         <br><br>
         <span class="content_main_bold">Alternative distributions</span><br><br>
-        <li><a href="http://www.winpenpack.com/en/download.php?view.941"></a> An excellent and up to date portable Data Crow Distribution<br></li>
+        <li><a href="http://www.winpenpack.com/en/download.php?view.941">winPenPack</a> An excellent and up to date portable Data Crow Distribution<br></li>
         <li><a href="http://packman.links2linux.de/package/datacrow">Packman</a> Linux distribution (RPM)<br></li>
         <li><a href=" http://portableapps.com/node/20087">PortableApps.com</a> Portable Data Crow distribution (test version)<br></li>
 
