*** empty log message ***

--- a/help/loan/loan.html
+++ b/help/loan/loan.html
@@ -10,7 +10,7 @@
     <img src="./images/loan.png" alt="" border="0"><br><br>
 
     Loans can be administered via the right-click menu on pressing "Loan Administration" or via the "Loan" tab of the item form. A history of loans is maintained.
-    You can get an overview of your loans by using the "Loan Information" utility from the "Administration" menu. The contact person form also contains a separate tab showing his lend items.
+    You can get an overview of your loans by using the <a href="../loan/loanadmin.html" target="main">Loan Administration</a> utility from the "Administration" menu. The contact person form also contains a separate tab showing his lend items.
     
     <br><br>
     
