*** empty log message ***

--- a/homepage/reviews.html
+++ b/homepage/reviews.html
@@ -130,6 +130,7 @@
      <!-- NEWS -->
     
     <span class="content_main_bold">Latest news</span><br><br>
+        <span class="content_main_bold">January 6, 2013<br>Data Crow 3.9.15 has been released</span><br><br>Many important fixes for the start of 2013.<br><br>
         <span class="content_main_bold">June 16, 2012<br>Data Crow 3.9.14 has been released</span><br><br>Contains bug fixes for Google search and the reports<br><br>
         <span class="content_main_bold">June 9, 2012<br>Data Crow 3.9.13 has been released</span><br><br>A new release with bug fixes and new functionaliy<br><br>
 
@@ -160,9 +161,9 @@
   <!-- DOWNLOAD -->
 
   <tr>
-    <td class="menu2" onClick=window.top.location.href='http://downloads.sourceforge.net/project/datacrow/Production%20versions/3.9.14/datacrow_3_9_14_zipped.zip' onmouseover=this.className='menu2o' onMouseOut=this.className='menu2'>Zipped</td>
-    <td class="menu3" onClick=window.top.location.href='http://downloads.sourceforge.net/project/datacrow/Production%20versions/3.9.14/datacrow_3_9_14_installer.zip' onmouseover=this.className='menu3o' onMouseOut=this.className='menu3'>Installer</td>
-    <td class="menu4" onClick=window.top.location.href='http://downloads.sourceforge.net/project/datacrow/Production%20versions/3.9.14/datacrow_3_9_14_windows_installer.zip' onmouseover=this.className='menu4o' onMouseOut=this.className='menu4'>Winstaller</td>
+    <td class="menu2" onClick=window.top.location.href='http://downloads.sourceforge.net/project/datacrow/Production%20versions/3.9.15/datacrow_3_9_15_zipped.zip' onmouseover=this.className='menu2o' onMouseOut=this.className='menu2'>Zipped</td>
+    <td class="menu3" onClick=window.top.location.href='http://downloads.sourceforge.net/project/datacrow/Production%20versions/3.9.15/datacrow_3_9_15_installer.zip' onmouseover=this.className='menu3o' onMouseOut=this.className='menu3'>Installer</td>
+    <td class="menu4" onClick=window.top.location.href='http://downloads.sourceforge.net/project/datacrow/Production%20versions/3.9.15/datacrow_3_9_15_windows_installer.zip' onmouseover=this.className='menu4o' onMouseOut=this.className='menu4'>Winstaller</td>
   </tr>
   <tr>
     <td height="10" colspan="3"></td>
@@ -179,7 +180,7 @@
     <td height="10" colspan="3"></td>
     </tr>
   <tr>
-    <td colspan="3" class="menu10" onClick=window.top.location.href='http://downloads.sourceforge.net/project/datacrow/Production%20versions/3.9.14/datacrow_3_9_14_source.zip' onmouseover=this.className='menu10o' onMouseOut=this.className='menu10'>Source code</td>
+    <td colspan="3" class="menu10" onClick=window.top.location.href='http://downloads.sourceforge.net/project/datacrow/Production%20versions/3.9.15/datacrow_3_9_15_source.zip' onmouseover=this.className='menu10o' onMouseOut=this.className='menu10'>Source code</td>
   </tr>
 
   <!-- END DOWNLOAD -->
