*** empty log message ***

--- a/homepage/index.html
+++ b/homepage/index.html
@@ -177,7 +177,11 @@
       <h3 class="page_title"> Latest News</h3>
         <div class="page_content"> 
           <ul>
-            <p><i>25 January 2013</i> - A new version: Data Crow 3.9.20</p>
+            <p><i>2 February 2013</i> - A new version: Data Crow 3.9.20</p>
+            <li><blockquote>This release contains a fix for the backup and restore process.
+            </blockquote></li>
+          
+            <p><i>25 January 2013</i> - A new version: Data Crow 3.9.19</p>
             <li><blockquote>This release contains fixes for issues caused by the upgrade of the database engine. 
             Also issues have been fixed for users upgrading from version 3.8.16 and older. This release also delivers smaller changes. 
             See the <a href="./changelog.txt" target="new">changelog</a> for more information.
@@ -188,7 +192,7 @@
             I quite like it and hope you do to!
             </blockquote></li>
             
-            <p><i>18 January 2013</i> - Data Crow 3.9.20 has been released</p>
+            <p><i>18 January 2013</i> - Data Crow 3.9.18 has been released</p>
             <li><blockquote>Pfew, the changes I made took quite a number of releases. I hope to have it under control now. 
             The backup and restore now works correct again. The issue with the upgrade of the database not working is mainly a security issue 
             on the various platforms. The only solution is, when prompted, to run the command as stated in the message box from the command line 
