*** empty log message ***

--- a/homepage/index.html
+++ b/homepage/index.html
@@ -177,6 +177,22 @@
       <h3 class="page_title"> Latest News</h3>
         <div class="page_content"> 
           <ul>
+            
+            <p><i>4 February 2013</i> - Development news</p>
+            <li><blockquote>Currently I am stabilizing Data Crow. You have seen numerous small versions being released over the past few 
+            days. This was all due to the two changes that were made; one was the upgrade of the database (engine) to the latest version
+            which was not easy and two was to use a separate data folder (user folder). The latter caused lots of small problems but I 
+            am sure I have fixed the most of them. The best thing is that it allows you to share your data crow data with other installations
+            on the network. The second best thing is that I no longer have to write data into the installation folder which was becoming more 
+            and more of an issue on the Windows platforms (Microsoft actively denies changing files in the "C:\program files" folders).
+            <br><br>
+            I am also busy with my secret side project; Data Crow on Android platforms. I hope I will have some more concrete news in the 
+            upcoming weeks. It is not part of the normal Data Crow project but it will allow you to run your modules and see your data on your
+            Android phone or tablet. The initial version will be very basic (and cheap). It's going to be interesting!
+            <br><br>
+            It does explain this better looking website a bit as well, doesn't it? :)
+            </blockquote></li>
+          
             <p><i>2 February 2013</i> - A new version: Data Crow 3.9.20</p>
             <li><blockquote>This release contains a fix for the backup and restore process.
             </blockquote></li>
