*** empty log message ***

--- a/homepage/index.html
+++ b/homepage/index.html
@@ -178,6 +178,11 @@
         <div class="page_content"> 
           <ul>
           
+            <p><i>29 April 2013</i> - Data Crow 3.9.22 has been released</p>
+            <li><blockquote>Quite an important bug fix release. I have added fixes for the upgrade and am really hoping to have solved all the issues now. It will check on startup if anything has gone wrong.. Let me know if you are still having issues (or also if you are not :). Other smaller fixes have been added as well. <br><br>
+            I apologize for not having been too actively working on Data Crow. A new job and vacations have caused some disruptions and this will continue for the next couple of weeks. Releases for fixes will still arrive but other work is currently on hold.
+            </blockquote></li>          
+          
             <p><i>10 February 2013</i> - Data Crow 3.9.21 has been released</p>
             <li><blockquote>This release contains a fixes for the upgrade process as well as some other minor fixes. See the <a href="./changelog.txt" target="new">changelog</a> for more information
             </blockquote></li>
